# espbase

./: README.md
emulated/esp-idf/include/: esp_err.h  esp_log.h
emulated/espbase/: nvs_store.cpp
src/espbase/: README.md  check_crash_loop.cpp  check_crash_loop.hpp  circular_history_buffer.cpp  circular_history_buffer.hpp  esp_result.hpp  esp_task.cpp  esp_task.hpp  json.h  json_fwd.h  nvs_store.cpp  nvs_store.hpp  psram_allocator.h  yielding_task.hpp
src/espbase/boot/: check_crash_loop.cpp  delayed_pm_enable.cpp  delayed_pm_enable.hpp  favicon_route.cpp  favicon_route.hpp  network_logger.cpp  network_logger.hpp  network_logger.html  ota_rollback_watchdog.cpp  ota_rollback_watchdog.hpp
tests/: CMakeLists.txt  CMakePresets.json  README.md
tests/espbase/: esp_result_test.cpp
